log
vi., 13 de may. de 2022 16:45:06: 
 sudoku.c | 21 ++++++++++++++++++++-
 1 file changed, 20 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:27: error: passing argument 2 of 'pushBack' makes pointer from integer without a cast [-Werror=int-conversion]
             pushBack(list,numeroColocar);
                           ^~~~~~~~~~~~~
In file included from test.c:4:0:
list.h:23:6: note: expected 'void *' but argument is of type 'int'
 void pushBack(List* list, void* data);
      ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
dc31009
vi., 13 de may. de 2022 16:45:29: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0a89df1
vi., 13 de may. de 2022 16:49:59: 
 sudoku.c | 17 +++++++++++++++--
 1 file changed, 15 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 20/70
2a4c939
vi., 13 de may. de 2022 16:50:18: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
de0ee22
vi., 13 de may. de 2022 16:50:38: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
7068117
vi., 13 de may. de 2022 16:57:51: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  2|4
total_score: 15/70
e1e006b
vi., 13 de may. de 2022 17:00:02: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
b215d60
vi., 13 de may. de 2022 17:01:32: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6ca0bf5
